refactor: Remove most warnings and clean up code